--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,12 +23,21 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'temurin'
     - name: Build with Gradle
       uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
       with:
         arguments: build
+    - name: Test & publish code coverage
+      uses: paambaati/codeclimate-action@v3.0.0
+      env:
+        CC_TEST_REPORTER_ID: ${{secrets.TEST_COVERAGE_ID}}
+        JACOCO_SOURCE_PATH: ${{github.workspace}}/src/main/java
+      with:
+        # The report file must be there, otherwise Code Climate won't find it
+        coverageCommand: make report
+        coverageLocations: ${{github.workspace}}/build/reports/jacoco/test/jacocoTestReport.xml:jacoco
